force-app/main/default/objects/User_Story_Approval__c/User_Story_Approval__c.object-meta.xml
<CustomObject>
    <description>SPRNT: User Story Approval Object for gaining approval from SalesForce users on completed user stories.</description>
    <label>User Story Approval</label>
    <nameField>
        <displayFormat>APR{0000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>