force-app/main/default/objects/User_Story_Approval__c/fields/APR_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>APR_Approval_Stage__c</fullName>
    <formula>IF(TEXT(APR_Status__c) = &quot;New Approval&quot; , IMAGE(&quot;img/feeds/follow12.png&quot;, &quot;New&quot;), 
IF(TEXT(APR_Status__c) = &quot;UAT/QA Pending&quot;, IMAGE(&quot;img/icon/people16.png&quot;, &quot;Pending&quot;), 
IF(TEXT(APR_Status__c) = &quot;UAT/QA Approved&quot;, IMAGE(&quot;resource/CCSIcons/Pause16.png&quot;, &quot;Green&quot;), 
IF(TEXT(APR_Status__c) = &quot;Production Sign Off Pending&quot;, IMAGE(&quot;img/icon/people16.png&quot;, &quot;Pending&quot;), 
IF(TEXT(APR_Status__c) = &quot;Production Sign Off Approved&quot;, IMAGE(&quot;img/msg_icons/confirm16.png&quot;, &quot;Approved&quot;), 
IF(TEXT(APR_Status__c) = &quot;Approval Rejected&quot;, IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Rejected&quot;), 
IMAGE(&quot;img/icon/ideabubble16.png&quot;, &quot;Other&quot;) 
) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Stage</label>
    <type>Text</type>
</CustomField>