force-app/main/default/objects/User_Story_Approval__c/fields/APR_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>APR_Deployment_Date__c</fullName>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>