force-app/main/default/objects/User_Story_Approval__c/fields/APR_Developer__c.field-meta.xml
<CustomField>
    <fullName>APR_Developer__c</fullName>
    <label>Developer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>