force-app/main/default/objects/User_Story_Approval__c/fields/APR_Production_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>APR_Production_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Story_Approval1</relationshipName>
    <type>Lookup</type>
</CustomField>