force-app/main/default/objects/User_Story_Approval__c/fields/APR_Sprint__c.field-meta.xml
<CustomField>
    <fullName>APR_Sprint__c</fullName>
    <label>Sprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>