force-app/main/default/objects/User_Story_Approval__c/fields/APR_Status__c.field-meta.xml
<CustomField>
    <fullName>APR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Approval</fullName>
            </value>
            <value>
                <fullName>UAT/QA Pending</fullName>
            </value>
            <value>
                <fullName>UAT/QA Approved</fullName>
            </value>
            <value>
                <fullName>Production Sign Off Pending</fullName>
            </value>
            <value>
                <fullName>Production Sign Off Approved</fullName>
            </value>
            <value>
                <fullName>Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>