force-app/main/default/objects/User_Story_Approval__c/fields/APR_Story_Detail__c.field-meta.xml
<CustomField>
    <fullName>APR_Story_Detail__c</fullName>
    <label>Story Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>