force-app/main/default/objects/User_Story_Approval__c/fields/APR_UAT_QA_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>APR_UAT_QA_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UAT/QA Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Story_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>