force-app/main/default/objects/User_Story_Approval__c/fields/APR_User_Story_ID__c.field-meta.xml
<CustomField>
    <fullName>APR_User_Story_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story ID</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>User Story Approval</relationshipLabel>
    <relationshipName>User_Story_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>