force-app/main/default/objects/User_Story_Approval__c/fields/APR_User_Story_Subject__c.field-meta.xml
<CustomField>
    <fullName>APR_User_Story_Subject__c</fullName>
    <label>User Story Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>