force-app/main/default/objects/User_Story_Approval__c/fields/SignOffDate__c.field-meta.xml
<CustomField>
    <fullName>SignOffDate__c</fullName>
    <formula>APR_Deployment_Date__c + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignOffDate</label>
    <type>Date</type>
</CustomField>