force-app/main/default/objects/User_Story_Approval__c/validationRules/Record_Owner_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Owner_Change</fullName>
    <active>true</active>
    <description>Only the current record owner can transfer ownership of an approval record</description>
    <errorConditionFormula>AND( 
$User.Id &lt;&gt; PRIORVALUE(OwnerId), 
$Profile.Name &lt;&gt; &quot;CCS System Administrator&quot;, 
ISCHANGED(OwnerId) 
)</errorConditionFormula>
    <errorMessage>Only the current record owner can transfer ownership of an approval record</errorMessage>
</ValidationRule>